syntax = "proto3";

option go_package = "github.com/ilya372317/pass-keeper/proto";

message User {
  int64 id = 1;
  string email = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  User user = 1;
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string access_token = 1;
}

service PassService {
  rpc Auth(AuthRequest) returns (AuthResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}